tests/type-errors/bad_contract_calling_arg.arl
archetype bad_contract_calling_arg

contract contract_called_sig {
   entry set_value (n : int)
   entry add_value (a : int, b : int)
}
variable c : contract_called_sig = @KT1RNB9PXsnp7KMkiMrWNMRzPjuefSWojBAm


entry update_value(n : int) {
  effect {
    c.set_value(n)
  }
}

entry add_one(n : int) {
  effect {
    transfer 0tz to c call set_value("mystr")
  }
}
